--- a/djtestdb/templates/emp/emprm.html
+++ b/djtestdb/templates/emp/emprm.html
@@ -4,7 +4,7 @@
 {% if employee %}
 {% if department %}
 
-<form action="{% url 'emp_store' employee.tablenumber %}" method="post">
+<form action="/emp/employee-rm/{{ employee.tablenumber }}/1" method="post">
     {% csrf_token %}
     <legend><h1>Сотрудник отдела '{{ department.name }}' </h1></legend>
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
@@ -13,33 +13,36 @@
         <input type="text" name="personname"
                class="form-control"
                placeholder="Введите ФИО"
-               id="personname" value="{{ employee.personname|default:'' }}"/>
+               id="personname" value="{{ employee.personname|default:'' }}"
+               disabled="disabled"/>
     </div>
     <div class="form-group">
         <label for="birthdate">Дата рождения ГГГГ-ММ-ДД:</label>
         <input type="text" name="birthdate"
                class="form-control"
                placeholder="Введите дату рождения"
-               id="birthdate" value="{{ employee.birthdate|default:''|date:"Y-m-d" }}"/>
+               id="birthdate" value="{{ employee.birthdate|default:''|date:"Y-m-d" }}"
+               disabled="disabled"/>
     </div>
     <div class="form-group">
         <label for="email">Email-адрес:</label>
         <input type="text" name="email"
                class="form-control"
                placeholder="person@example.com"
-               id="email" value="{{ employee.email|default:'' }}"/>
+               id="email" value="{{ employee.email|default:'' }}"
+               disabled="disabled"/>
     </div>
     <div class="form-group">
         <label for="jobposition">Должность:</label>
         <input type="text" name="jobposition"
                class="form-control"
                placeholder="Вахтер"
-               id="jobposition" value="{{ employee.jobposition|default:'' }}"/>
+               id="jobposition" value="{{ employee.jobposition|default:'' }}"
+               disabled="disabled"/>
     </div>
     <input type="hidden" name="tablenumber" value="{{ employee.tablenumber|default:'' }}"/>
     <input type="hidden" name="depatment" value="{{ employee.department.number|default:'' }}"/>
-    <input type="hidden" name="depno" value="{{ department.number|default:'' }}"/>
-    <input class="btn btn-primary" type="submit" value="Сохранить"/>
+    <input class="btn btn-danger" type="submit" value="Удалить"/>
 </form>
 {% else %}
 <p> Что-то не так с данными по отделу сотрудника. Обратитесь к администратору. </p>
