Added Report 1 showing.

--- a/djtestdb/templates/emp/departments.html
+++ b/djtestdb/templates/emp/departments.html
@@ -22,13 +22,13 @@
            href="/emp/department-rm/{{ d.number }}/0">Удалить</a>
       </div>
     </td>
-    <td><a href="/emp/depatment-report/{{ d.number }}/" class="btn btn-secondary">Отчет</a></td>
+    <td><a href="/emp/department-report/{{ d.number }}/" class="btn btn-secondary">Отчет</a></td>
   </tr>
   {% endfor %}
   <tr>
       <td></td>
-      <td><a href="/emp/depatment-report/0/" class="btn btn-secondary">Отчет по всем отделам</a></td>
-      <td><a href="/emp/depatment-add/" class="btn btn-success">Добавить отдел</a></td>
+      <td><a href="/emp/department-report/0/" class="btn btn-secondary">Отчет по всем отделам</a></td>
+      <td><a href="/emp/department-add/" class="btn btn-success">Добавить отдел</a></td>
   </tr>
   </tbody>
 </table>
